progs/tests/conflict_markers.sy
start :: fn {

<<<<<<< HEAD
    print extern_test(4.0)
=======
    print extern_test(5.0)
>>>>>>> 2

}

// error: @_
// error: Error::GitConflictError { start: 3, end: 7, .. }
